--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
     <section class="footerSection text-center">
         <div>
-            <div> <p> <a href="">Home </a> | <a href="">Terms and Condition </a> | <a href="">Privacy and Policy </a>|   Do Not Sell My Personal Information</p></div>
+            <div> <p> <a href="">Home </a> | <a href="">Terms and Condition </a> | <a href="">Privacy and Policy </a>| <a href=""> Do Not Sell My Personal Information</a>  </p></div>
            <div>
           
            </div>
