--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <input class="form-control mb-3" type="text" placeholder="Address" aria-label=".form-control-lg example">
             <div class="form-group sideBySide">
                 <input class="form-control mb-3" type="text" placeholder="City" aria-label=".form-control-lg example">
-                <select class="form-select mb-3" aria-label="Default select example">
+                <select class="form-select nMargin mb-3" aria-label="Default select example">
                     <option selected>State</option>
                     <option value="1">One</option>
                     <option value="2">Two</option>
@@ -64,7 +64,7 @@
             
             <input class="form-control mb-3" type="number" placeholder="Zip Code" aria-label=".form-control-lg example">
 
-            <div class="form-group  d-sm-flex mb-3 fromBlock">
+            <div class="form-group  d-flex mb-3 fromBlock">
                 <select class="form-select " aria-label="Default select example">
                     <option selected>Month</option>
                     <option value="1">January </option>
