--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <P>FIND OUT NOW</P>
             </div>
             <div class="form-group sideBySide">
-                <input class="form-control mb-3" type="text" placeholder="First Name" aria-label=".form-control-lg example">
+                <input class="form-control mRight mb-3" type="text" placeholder="First Name" aria-label=".form-control-lg example">
                 <input class="form-control mb-3" type="text" placeholder="Last Name" aria-label=".form-control-lg example">
             </div>
           
             <input class="form-control mb-3" type="email" placeholder="Your E-mail" aria-label=".form-control-lg example">
             <input class="form-control mb-3" type="text" placeholder="Address" aria-label=".form-control-lg example">
             <div class="form-group sideBySide">
-                <input class="form-control mb-3" type="text" placeholder="City" aria-label=".form-control-lg example">
+                <input class="form-control mRight mb-3" type="text" placeholder="City" aria-label=".form-control-lg example">
                 <select class="form-select nMargin mb-3" aria-label="Default select example">
                     <option selected>State</option>
                     <option value="1">One</option>
